# Skupinova_Prace_2025

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  generate-launch.sh
Textova_hra/: TODO.md  main.cpp
Textova_hra/data/: 1J_Ctverec.txt  enemies.txt  loot_table.txt  pravidla.txt  tvorba_mistnosti_pomocnik.txt
Textova_hra/src/: Kresleni.cpp  Kresleni.h  Mistnost.cpp  Mistnost.h  StatBar.cpp  StatBar.h  combat.cpp  combat.h  dice_roll.cpp  dice_roll.h  difficulty.cpp  difficulty.h  enemy_types.cpp  enemy_types.h  inventory.cpp  inventory.h  loot.cpp  loot.h  main_pro_kresleni_co_mi_funguje.cpp  pravidla.txt  pravidla_hry.cpp  pravidla_hry.h
Ukoly_18-11-2025/: kniha.txt  main.cpp
Ukoly_7-11-2025/: main.cpp
